--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "MyPCAPlots"
+name = "Sebaxu"
 uuid = "950ad09b-307f-438b-9b61-dfcb3fec248a"
 authors = ["Shraoui Tarik Ziad <sahraouitrikziad@gmail.com>"]
 version = "0.1.0"
